2011-10-20  Kirit Saelensminde  <kirit@felspar.com>
 Fixed the setup.py so that it contains the correct Python project name.

2011-08-18  Kirit Saelensminde  <kirit@felspar.com>
 Added a function fost_authn.signature.filter_query_string that can be used to remove the signature query string values from a supplied query string.

2011-05-26  Kirit Saelensminde  <kirit@felspar.com>
 - Added support for signed URLs used for GET and HEAD requests.

2011-05-03  Kirit Saelensminde  <kirit@felspar.com>
 ChangeLog
 - Added ChangeLog